Fix unresponsive index page on smaller heights, mobile landscape views

--- a/style.css
+++ b/style.css
@@ -86,23 +86,21 @@ body {
 
 main {
     display: grid;
-    align-content: center;
     height: 100%;
     padding: var(--content-padding);
     gap: var(--content-spacing);
-
+    align-content: start;
+    text-align: center;
 }
 
 h1 {
     color: var(--clr-primary-light);
     font-size: 2rem;
-    text-align: center;
 }
 
 h2 {
     color: var(--clr-primary-light);
     font-size: 1.3rem;
-    text-align: center;
 }
 
 p {
@@ -110,8 +108,6 @@ p {
     color: var(--clr-primary-light);
     padding: calc(var(--content-padding) * 0.6);
     padding-top: 0;
-
-    text-align: center;
 }
 
 .list {
@@ -137,16 +133,9 @@ a {
     font-weight: var(--fw-regular);
     color: var(--clr-secondary-light);
     text-decoration: none;
-    text-align: center;
 }
 
 a:hover {
     background-color: var(--clr-primary-alpha-90);
     color: fuchsia;
-}
-
-@media (max-width: 270px) {
-    main {
-        align-content:  start;
-    }
 }
